# tue_manipulation

./: .travis.yml  CMakeLists.txt  laser-perception.launch  mainpage.dox  manifest.xml  package.xml  stack.xml  start.launch  visualize.launch  visualize.vcg
action/: GraspPrecompute.action  GripperCommand.action  grasp_precompute.action  grasp_precompute_action.cpp.new
amigo_arm_navigation_actions/: manifest.xml
amigo_arm_navigation_actions/launch/: environment_server_right_arm.launch  move_right_arm.launch  right_arm_collision_free_trajectory_control.launch
amigo_arm_navigation_actions_dev/: mainpage.dox
amigo_arm_navigation_actions_dev/config/: environment_server_padding.yaml
amigo_arm_navigation_clients/: CMakeLists.txt  filt_traj.fig  filt_traj.rtp  manifest.xml  path_planning.m  sortdata.m
amigo_arm_navigation_clients/src/: get_state_validity.cpp  test_client.cpp  test_client_move_left.cpp  test_client_move_right.cpp  test_client_path_constraints.cpp  test_client_pose_constraints.cpp
amigo_arm_navigation_clients_dev/: mainpage.dox  path_planning.m
amigo_arm_navigation_clients_dev/src/: test_client_path_constraints.cpp  test_client_pose_constraints.cpp
amigo_arm_navigation_config/: mainpage.dox
amigo_arm_navigation_config/config/: collision_checks_both_arms.yaml  joint_limits.yaml  planning_groups.yaml  robot_larger_padding.yaml  robot_padding.yaml
amigo_arm_navigation_config/launch/: planning_environment.launch
amigo_arm_navigation_config_dev/: manifest.xml
amigo_arm_navigation_config_dev/config/: multi_dof_joints.yaml
amigo_arm_navigation_filtering/: mainpage.dox  manifest.xml
amigo_arm_navigation_filtering_dev/launch/: trajectory_filter.launch
amigo_arm_navigation_kinematics_dev/: mainpage.dox  manifest.xml
amigo_arm_navigation_kinematics_dev/launch/: right_arm_collision_free_ik.launch
amigo_arm_navigation_launch/: manifest.xml  right_arm_navigation.launch  rviz_config.vcg  start_world.launch  start_world2.launch  start_world_clean.launch
amigo_arm_navigation_launch_dev/: mainpage.dox  start_world.launch
amigo_arm_navigation_objects/: CMakeLists.txt  display_planner_collision_model.launch  mainpage.dox  manifest.xml
amigo_arm_navigation_objects/src/: add_pole.cpp
amigo_arm_navigation_objects_dev/: CMakeLists.txt
amigo_arm_navigation_perception_dev/: mainpage.dox  manifest.xml
amigo_arm_navigation_perception_dev/launch/: laser-perception.launch
amigo_arm_navigation_planning/: mainpage.dox
amigo_arm_navigation_planning/launch/: ompl_planning.launch
amigo_arm_navigation_planning_dev/: manifest.xml
amigo_arm_navigation_planning_dev/config/: ompl_planning_configs.yaml
amigo_arm_navigation_planning_dev/launch/: ompl_planning.launch
config/: amigo_planning_description.yaml  amigo_planning_description_complex.yaml  amigo_planning_description_simple.yaml  collision_map_sources.yaml  joint_limits.yaml  joint_names_left.yaml  joint_names_right.yaml  joints_left.yaml  joints_right.yaml  ompl_planning.yaml  self_filter.yaml  self_filter_amigo.yaml  tolerances_left.yaml  tolerances_right.yaml
include/tue/manipulation/: constrained_chainiksolverpos_nr_jl.hpp  constrained_chainiksolvervel_pinv.h  dwa.h  graph_viewer.h  grasp_precompute.h  ik_solver.h  reference_generator.h  reference_interpolator.h
launch/: amigo_arm_navigation.launch  amigo_planning_environment.launch  both_arms_navigation.launch  both_arms_navigation_rob.launch  collision_monitor.launch  constraint_aware_kinematics.launch  demo.vcg  environment_server.launch  grasp_precompute_action.launch  joint_trajectory_action.launch  joint_trajectory_action_start_left.launch  joint_trajectory_action_start_right.launch  joint_trajectory_publisher_start_left.launch  joint_trajectory_publisher_start_right.launch  move_groups.launch  move_l_end_effector.launch  move_left_arm.launch  move_r_end_effector.launch  move_right_arm.launch  ompl_planning.launch  planning_components_visualizer.launch  planning_scene_warehouse_viewer_amigo.launch  pre_grasp.launch  reference_generator.launch  trajectory_filter_server.launch
scripts/: move_arm_joint_goal.py  move_arm_pose_goal.py  move_arm_pose_goal2.py  test_IK.py  test_grasp_precompute.py
src/: constrained_chainiksolverpos_nr_jl.cpp  constrained_chainiksolvervel_pinv.cpp  dummy_joint_publisher.cpp  dwa.cpp  get_ik.cpp  get_solver_info.cpp  get_state_validity.cpp  graph_viewer.cpp  grasp_handle.cpp  grasp_precompute.cpp  grasp_precompute_action.cpp  grasp_precompute_action.cpp.new  grasp_precompute_action_fuerte.cpp  grasp_precompute_action_no_movearm.cpp  gripper_server.cpp  ik_solver.cpp  joint_trajectory_action.cpp  joint_trajectory_publisher.cpp  move_arm_joint_goal_left.cpp  move_arm_joint_goal_right.cpp  move_arm_pose_goal.cpp  move_group_interface_tutorial.cpp  pre_grasp.cpp  reference_generator.cpp  reference_generator.h  reference_interpolator.cpp  simple_trajectory.cpp  test_grasp_precompute.cpp  test_move_arm.cpp  torso_server.cpp
test/: grasp_precompute.py  move_arm_interface.py  test_amigo_dwa.cpp  test_amigo_ik.cpp  test_grasp_precompute.cpp  test_grasp_precompute_amigo.py  test_gripper_server.cpp  test_moveit.cpp  test_moveit.py  test_multi_refgen.cpp  test_refgen.cpp  test_robot_ik.cpp  test_torso_server.cpp  visualize_joint_trajectory_action_goal.py
urdf/: robot_complex.urdf  robot_simple.urdf
