<?xml version="1.0"?>
<package>
  <name>tue_manipulation</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>amigo_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>tue_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geolib2</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>kdl_parser</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>amigo_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>tue_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>geolib2</run_depend>
  <run_depend>message_runtime</run_depend>
  

</package>
